# optics-by-example

./: CHANGELOG.md  LICENSE  README.md  optics-by-example.cabal
app/: Main.hs
